III-2061 z-index fix

--- a/src/styles/event-form.less
+++ b/src/styles/event-form.less
@@ -755,11 +755,11 @@ form.booking-period {
     border: 1px solid @udb-gray-light;
   }
     .input-group {
-        z-index: -50;
+        z-index: 0;
     }
 
     .input-group-btn{
-        z-index: -50;
+        z-index: 0;
     }
 }
 
